# ai-dev-memory

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: devmemory-cold-start.mdc  devmemory.mdc
.github/workflows/: ci.yml  npm-publish.yml  pypi-publish.yml
devmemory/: __init__.py  __main__.py  agent_tools.py  cli.py
devmemory/attribution/: __init__.py  cloud_storage.py  config.py  redis_storage.py  sqlite_storage.py  storage.py
devmemory/commands/: add.py  attribution.py  config_cmd.py  context.py  install.py  learn.py  prompts.py  search.py  stats.py  status.py  summarize.py  sync.py  why.py
devmemory/core/: ams_client.py  config.py  git_ai_parser.py  llm_client.py  logging_config.py  memory_formatter.py  sync_state.py  utils.py
devmemory/hooks/: post_commit.py
devmemory/rules/: devmemory-cold-start.mdc  devmemory.mdc
devmemory/sentry/: __init__.py
devmemory/skills/devmemory-context/: SKILL.md
devmemory/skills/devmemory-coordination/: SKILL.md
devmemory/skills/devmemory-memory/: SKILL.md
npm/@devmemory/sentry/: README.md  package-lock.json  package.json
npm/@devmemory/sentry/src/: index.ts
scripts/: install-simple.sh  install.sh  verify.sh
tests/: conftest.py  test_ams_client.py  test_ams_prompt_search.py  test_attribution_cli.py  test_cli.py  test_git_ai_parser.py  test_install_skills.py  test_learn.py  test_llm_client.py  test_memory_formatter.py  test_repo_scoping.py  test_search.py  test_status.py  test_sync.py  test_why.py
