[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devmemory"
version = "0.1.12"
description = "Sync AI coding context from Git AI to Redis Agent Memory Server for semantic search and recall."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "DevMemory" },
]
keywords = ["ai", "memory", "git", "redis", "developer-tools", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "tiktoken>=0.12.0",
]

[project.scripts]
devmemory = "devmemory.cli:main"

[project.urls]
Homepage = "https://github.com/devmemory/devmemory"
Repository = "https://github.com/devmemory/devmemory"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "build>=1.2.2",
    "twine>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["devmemory"]

[tool.ruff]
target-version = "py310"
line-length = 120
